--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: obd2_plugin
-description: A new Flutter project for connecting to ecu cars with car obd port & ELM327 dongle.
-version: 0.0.1
+description: A new Flutter project for connecting to ECU cars with car OBD port & ELM327 dongle.
+version: 0.0.2+1
 homepage:
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.20.0"
+  sdk: ">=2.17.0 <4.0.0"
+  flutter: ">=2.10.0"
 
 dependencies:
   flutter:
@@ -14,11 +14,20 @@ dependencies:
   flutter_bluetooth_serial: ^0.4.0
   math_expressions: ^2.3.0
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
+
+flutter:
+  plugin:
+    platforms:
+      android:
+        package: app.begaz.obd.two.plugin.obd2_plugin
+        pluginClass: Obd2Plugin
+      ios:
+        pluginClass: Obd2Plugin
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
